<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QR-Labyrinth</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="level_select">Level Select</string><string name="story">PLAY DEFAULT</string>
    
    <string name="credits">Credits</string>
    <string name="exit">EXIT</string>
    <string name="custom_level">PLAY CUSTOM</string>
    <string name="title_activity_game_field">GameField</string>
    <string name="title_activity_custom_level">CustomLevel</string>
    <string name="title_activity_select_level">SelectLevel</string>
    <string name="back">Back</string>
    <string name="scan">IMPORT LEVEL</string>
    <string name="play">PLAY LEVEL</string>
    <string name="trash">X</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="contentDescription">No Content Description</string>
    <string name="chronometer">Chronometer</string>
    

</resources>
